# us-power-plant-db

./: .gitignore  README.md  pyproject.toml
data/: data_urls.json
data/mappings/: prime_mover_lookup.json
src/: config.py
src/eia860/: load_data.py  processing.py
src/utils/: column_filter.py  download_data.py  filtering.py  lookup_tables.py
