[project]
name = "us-power-plants-database"
version = "0.1.0"
description = ""
authors = [
    { name = "peppapig450", email = "developer.riverside511@passmail.net" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas[csv,performance] (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
